--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "amqplib": "^0.4.2",
     "async": "^2.0.1",
+    "uuid": "^2.0.3",
     "winston": "^2.2.0"
   },
   "devDependencies": {
