--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^3.1.1",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "mocha-eslint": "^3.0.1"
   }
 }
