--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/larvit/larvitamintercom.git"
   },
   "author": "Gagge <tobias@nublar.se>",
-  "license": "UNLICENSED",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/larvit/larvitamintercom/issues"
   },
