--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/larvit/larvitamintercom#readme",
   "dependencies": {
-    "amqplib": "^0.4.2",
     "async": "^2.0.1",
+    "bramqp": "^0.5.0",
     "uuid": "^2.0.3",
     "winston": "^2.2.0"
   },
