--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "larvitamintercom",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,8 @@
   "dependencies": {
     "async": "^2.0.1",
     "bramqp": "^0.5.0",
+    "larvitutils": "^1.0.4",
+    "node-uuid": "^1.4.7",
     "winston": "^2.2.0"
   },
   "devDependencies": {
