--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "async": "^2.0.1",
     "bramqp": "^0.5.0",
     "larvitutils": "^1.0.4",
-    "node-uuid": "^1.4.7",
+    "uuid": "^3.0.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
