--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "larvitamintercom",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,13 @@
     "url": "git+https://github.com/larvit/larvitamintercom.git"
   },
   "author": "Gagge <tobias@nublar.se>",
+  "contributors": [
+    {
+      "name": "Lillem4n",
+      "email": "lilleman@larvit.se",
+      "url": "larvit.se"
+    }
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/larvit/larvitamintercom/issues"
