--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,4 @@ addons:
     packages:
     - g++-4.8
 
-script:
-  - script: env CONSTR="amqp://guest:guest@127.0.0.1/" mocha
-  - script: env CONSTR="loopback interface" mocha
+script: env CONSTR="amqp://guest:guest@127.0.0.1/" mocha
