--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "larvitamintercom",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "async": "^2.0.1",
     "bramqp": "^0.5.0",
     "larvitutils": "^1.1.0",
+    "lodash": "^4.17.4",
     "uuid": "^3.0.0",
     "winston": "^2.2.0"
   },
