--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "async": "^2.0.1",
     "bramqp": "^0.5.0",
+    "bramqp-wrapper": "^0.12.2",
     "larvitutils": "^1.1.0",
     "lodash": "^4.17.4",
     "uuid": "^3.0.0",
@@ -33,6 +34,9 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-import": "^2.11.0",
     "mocha": "^5.1.1",
     "mocha-eslint": "^4.1.0"
   }
