--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
 		"function-paren-newline":	["error", "never"],
 		"indent":	["error", "tab"],
 		"key-spacing":	[0],
+		"keyword-spacing":	["error", {"before": true, "after": true}],
 		"no-mixed-requires":	[0],
 		"no-multi-spaces":	[0],
 		"no-process-exit":	[0],
@@ -23,6 +24,8 @@
 		"one-var":	[2],
 		"quotes":	[2, "single"],
 		"semi":	[2, "always"],
+		"space-before-blocks":	["error", "always"],
+		"space-before-function-paren":	["error", {"anonymous": "always", "named": "never", "asyncArrow": "always"}],
 		"space-infix-ops":	[2],
 		"space-unary-ops":	[1, { "words": true, "nonwords": true }],
 		"strict":	[2, "global"],
