--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
 		"no-unused-vars":	[2],
 		"no-use-before-define":	[0],
 		"one-var":	[2],
+		"quote-props":	["error",	"always", {"keywords": true, "unnecessary": true, "numbers": true}],
 		"quotes":	[2, "single"],
 		"semi":	[2, "always"],
 		"space-before-blocks":	["error", "always"],
