--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,30 @@ on: [push]
 
 jobs:
   test:
-    uses: larvit/standards/.github/workflows/test-mariadb.yml@master
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
+
+    steps:
+    - uses: getong/rabbitmq-action@v1.2
+      with:
+        rabbitmq version: 3-management
+        host port: 15672
+        rabbitmq user: 'admin'
+        rabbitmq password: 'Admin'
+        rabbitmq vhost: '/'
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: echo '"amqp://admin:Admin@127.0.0.1:15672"' > ./config/amqp_test.json
+    - run: npm ci
+    - run: npm test
+
 
   publish:
     if: github.ref == 'refs/heads/master'
