--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "larvitamintercom",
-  "version": "0.4.96",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -26,10 +26,11 @@
   },
   "homepage": "https://github.com/larvit/larvitamintercom#readme",
   "dependencies": {
+    "amqp-connection-manager": "4.1.14",
+    "amqplib": "0.10.7",
     "async": "3.2.6",
-    "bramqp": "0.6.1",
-    "larvitutils": "5.1.135",
-    "uuid": "10.0.0"
+    "larvitutils": "5.1.140",
+    "uuid": "11.1.0"
   },
   "devDependencies": {
     "eslint": "8.57.1",
